# wormhole-vaa-spy

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
mechanics/: Cargo.toml
mechanics/src/: cli.rs  lib.rs  main.rs  server.rs  subscription_stream.rs
mechanics/src/worm_p2p/: mod.rs  p2p.rs  utils.rs
proto/: Cargo.toml  build.rs
proto/proto/: gossip.proto  publicrpc.proto  spy.proto
proto/src/: lib.rs
