[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_wormhole = {git = "https://github.com/wormhole-foundation/wormhole", tag = "v2.17.1"}
wormhole-sdk = {git = "https://github.com/wormhole-foundation/wormhole",  tag = "v2.17.1"}
wormhole-protos = {path = "../proto"}
prost = "0.11.9"
prost-types = "0.11.9"
tonic = "0.9.2"
tokio = {version = "1.28.2", features = ["full"]}
tokio-stream = "0.1.11"
crossbeam-channel = "0.5.8"
uuid = {version = "1.4.1", features = ["v4", "fast-rng"]}
log = "0.4.20"
clap = { version = "4.3.12", features = ["derive"] }
libp2p = {git = "https://github.com/libp2p/rust-libp2p", features = ["async-std", "noise", "macros", "ping", "tcp", "identify", "yamux", "relay", "kad", "quic", "gossipsub",]}

[patch.crates-io]
serde_wormhole = { git = "https://github.com/wormhole-foundation/wormhole", tag = "v2.17.1" }