[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_wormhole = {git = "https://github.com/wormhole-foundation/wormhole", tag = "v2.17.1"}
wormhole-sdk = {git = "https://github.com/wormhole-foundation/wormhole",  tag = "v2.17.1"}
wormhole-protos = {path = "../proto"}
prost = "0.12.1"
prost-types = "0.12.1"
futures = "0.3.28"
tonic = "0.10.0"
tokio = {version = "1.32.0", features = ["full"]}
tokio-stream = "0.1.11"
crossbeam-channel = "0.5.8"
uuid = {version = "1.4.1", features = ["v4", "fast-rng"]}
log = "0.4.20"
clap = { version = "4.3.12", features = ["derive"] }
libp2p = { version = "0.52.2", features = ["tokio", "gossipsub", "macros", "quic","kad", "dns", "gossipsub", "ping"] }
ed25519-dalek = "1.0.1"
sha3 = "^0.10"
bincode = "^1.3"
rand = {version = "0.7", features = ["default"]}
rand_core = "0.6.4"
thiserror = "1.0.49"

[patch.crates-io]
serde_wormhole = { git = "https://github.com/wormhole-foundation/wormhole", tag = "v2.27.1" }