[package]
name = "wormhole-protos"
version = "0.1.0"
authors = ["Wormhole foundation"]
license = "Apache-2.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
prost = "0.11.9"
prost-types = "0.11.9"
tonic = "0.9.2"

serde_wormhole = {git = "https://github.com/wormhole-foundation/wormhole", tag = "v2.17.1"}
wormhole-sdk = {git = "https://github.com/wormhole-foundation/wormhole",  tag = "v2.17.1"}


[build-dependencies]
tonic-build = "0.9.2"
prost-build = "0.11.9"
protobuf-src = "1.1.0"
anyhow = "1.0.71"
 
[patch.crates-io]
serde_wormhole = { git = "https://github.com/wormhole-foundation/wormhole", tag = "v2.17.1" }